--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                     </div>
                 </div>
             </div>
-            <form action="https://depauperate-adaptio.000webhostapp.com/delcaribe_response_prod_selected.php" method="get" id="form-ordenar">
+            <!--Enlce de respuesta a pedido en action-->
+            <form action="http://localhost:80/delcaribe/response_prod_selected.php" method="get" id="form-ordenar">
                 <div>
                     <h4>Mesa</h4>
                     <div class="alert inv" id="alert_mesa">
